[b]Version 0.6.8[/b]:

(2009-03-18)
 * (Videopreview) Ctrl+H toggles displaying the info about the video.

(2009-03-16)
 * (Windows) Now by default the combos in Preferences -> Drives will show all
   drives, not only CD/DVD devices, as it has been reported that checking
   for those devices can be slow if there are network drives. Now there's
   a button "Scan for CD/DVD devices" to force the detection of CD/DVD devices.

(2009-03-12)
 * Deleted the obsolete translations from smplayer_gl.ts (caused lrelease
   to fail with Qt 4.5.0).

(2009-03-11)
 * Fixed some build problems that could make the installation fail, trying to 
   recompile everything again with qt3 because QMAKE can be undefined during 
   make install.


[b]Version 0.6.7[/b]:

(2009-03-06)
 * The media type icons (type_audio.png, type_dvd.png, type_url.png, 
   type_video.png, type_cdda.png, type_unknown.png and type_vcd.png) which 
   appear in the info window can now be overridden by the icon themes.

(2009-03-05)
 * (Playlist) Try to figure out if a file is local (when the file is added
   to the playlist) not using QFile::exists, as it seems it can be slow
   with remote files. It might fix bug #2586395, although I can't test.

(2009-02-19)
 * Using software volume by default.

(2009-02-17)
 * Using multiple ini files to store the file settings by default now.

(2009-02-15)
 * Added preliminary support for the upcoming mplayer 1.0rc3.

(2009-02-09)
 * (ASS subtitles) The outline and shadow options now accept values with
   decimals.

(2009-02-04)
 * Now the default value for the "correct pts" option is auto.

(2009-01-31)
 * (Videopreview) Added a new option to remember the last folder used for
   saving the preview image. If not checked, it will suggest the same
   folder of the video to save the image.
 * New action toggle_stay_on_top, which toggles between "stay on top always" 
   and "stay on top never". If "stay on top while playing" is enabled, this
   action does nothing.

(2009-01-29)